[BEAM-4347] Enforce ErrorProne analysis in kafka IO